syntax="proto3";

package backend;

message Memo {
  enum ReportType {
   SELF_REPORTED       = 0;
   CERTIFIED_INFECTION = 1;
  }
  ReportType     reportType = 1;
  int32          diseaseID = 2; //0=Healthy, 1=Unhealthy/Unknown, 2= COVID-19
  repeated int32 symptomID = 3;
}
z
